XSensor/XSNReader-20220817/XSNReader/XSNReader.h

// force/load units
enum EXSNForceUnit
{
	eXSNFORCEUNIT_UNKNOWN = 0,	//  raw pressure values?
	eXSNFORCEUNIT_NEWTONS = 1,	// newtons
	eXSNFORCEUNIT_KGF = 2,		// kilograms of force
	eXSNFORCEUNIT_LBF = 10,		// pound-force
};
enum EXSNReaderErrorCodes
{
	eXSN_ERRORCODE_OK,							// Function ran normally

	eXSN_ERRORCODE_LIBRARY_NOT_INITIALIZED,		// The DLL library has not been initialized

	eXSN_ERRORCODE_INVALID_XSN,					// LoadSession failed because the session is not a valid xsensor file
	eXSN_ERRORCODE_INVALID_VERSION,				// LoadSession failed because the session is a valid xsensor file, but the version is not supported.
	eXSN_ERRORCODE_UNSUPPORTED_SENSOR,			// The reader DLL does not support the sensor model found in the XSN.

	eXSN_ERRORCODE_NOSESSION,					// The operation failed because no session has been loaded.
	eXSN_ERRORCODE_EMPTYSESSION,				// The operation failed because there are no frames in this session

	eXSN_ERRORCODE_BADPARAMETER_OUTOFRANGE,		// a parameter is out of range
	eXSN_ERRORCODE_BADPARAMETER_NULL,			// null parameter - pass in a variable/buffers address

	eXSN_ERRORCODE_MEMORYALLOCATION_FAILED,		// the system seems to be running low on memory, or the DLL could not allocate some memory
};
// ===========================================================================
//	Configuration functions
// ===========================================================================

extern "C" XSNREADER_API EXSNReaderErrorCodes XSN_GetLastErrorCode();
// Returns true if the pad is a foot sensor.  bLeftSensor = false when its a right foot sensor.

extern "C" XSNREADER_API uint16_t XSN_Rows(uint8_t pad);
// Returns the number of rows associated with the pad index (0 based index)

extern "C" XSNREADER_API uint16_t XSN_Columns(uint8_t pad);
// Sets the pressure unit format of the pressure values

extern "C" XSNREADER_API EXSNForceUnit XSN_GetForceUnits();
// Return the peak/maximum pressure on the pressure map.

extern "C" XSNREADER_API float XSN_GetStatMinPressure(uint8_t pad, float nZeroThreshold);
// Return the minimum pressure on the pressure map. Zero pressure cells are not included in the statistic.

extern "C" XSNREADER_API float XSN_GetStatContactAreaCM(uint8_t pad, float nZeroThreshold);
// Return the area (centimeters) of the pressure map with pressure at or above the zero threshold.
// Zero pressure cells are not included in the statistic.

extern "C" XSNREADER_API float XSN_GetStatEstimatedLoad(uint8_t pad, float nZeroThreshold);
// Return the estimated load (force) applied to the sensor.
// Zero pressure cells are not included in the statistic.
// Call XSN_GetForceUnits() to determine the units of the load statistic.


extern "C" XSNREADER_API bool XSN_GetCOP(uint8_t pad, float nZeroThreshold, float& column, float& row);