XSensor/XSNReader-20220817/XSNReader/XSNReader.cs


        [DllImport(DLL_TARGET, CallingConvention = CallingConvention.Cdecl)]
        public static extern float XSN_GetStatMinPressure(byte pad, float zeroThreshold);
        // Return the minimum pressure on the pressure map. Zero pressure cells are not included in the statistic.

        [DllImport(DLL_TARGET, CallingConvention = CallingConvention.Cdecl)]
        public static extern float XSN_GetStatContactAreaCM(byte pad, float zeroThreshold);
        // Return the area (centimeters) of the pressure map with pressure at or above the zero threshold.
        // Zero pressure cells are not included in the statistic.

        [DllImport(DLL_TARGET, CallingConvention = CallingConvention.Cdecl)]
        public static extern float XSN_GetStatEstimatedLoad(byte pad, float zeroThreshold);
        // Return the estimated load (force) applied to the sensor.
        // Zero pressure cells are not included in the statistic.
        // Call XSN_GetForceUnits() to determine the units of the load statistic.

        [DllImport(DLL_TARGET, CallingConvention = CallingConvention.Cdecl)]
        public static extern float XSN_GetCOP(byte pad, float zeroThreshold, ref float column, ref float row);
        // Computes the center of pressure (COP) and returns its column and row coordinates.
        // Returns negative coordinates if there is a problem. Call XSN_GetLastErrorCode() if that occurs.
        //
        // The center of pressure calculation ignores pressure which is below the zero threshold.
        // Row coordinates are from 1 to XSN_Rows()
        // Column coordinates are from 1 to XSN_Columns()
        //
        // Whole numbers (no fractions) indicate the COP is over the center of the sensel.
        //
        // The fractional part of the coordinate indicates a normalized distance between
        // the centers of two sensels.
        //
        // Example
        // Suppose the function returns these values: column = 1.53f; row = 2.25f.
        // This means the COP is 53% of the distance between the center of column 1 and
        // the center of column 2. The COP is 25% of the distance between the center
        // of row 2 and the center of row 3. (It is closer to row 2).

    }

} // xsensor namespace